# binary-loader

./: .clang-format  CMakeLists.txt  README.md
docker/: Dockerfile
include/: loader.hpp
src/: CMakeLists.txt  loader.cpp
test/: CMakeLists.txt  loader_demo.cpp
